fixing the bad spacing on the landing page

--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -4,7 +4,6 @@
 	background-image:url('/images/new/headerbg.png');
 	background-repeat:repeat-x;
 	width:100%;
-
 }
 
 .middleWrapper{
@@ -424,6 +423,10 @@
 	height:165px;
 }
 
+.storyGrid div{
+	margin:5px 0px 0px 10px;
+}
+
 .storyGrid li h3 a{
 	text-transform:none;
 	font-family:Helvetica,arial,sans-serif;
@@ -458,7 +461,7 @@
 	color:#fff;
 	font-size:12px;
 	line-height:14px;
-	margin:5px 0px;
+	margin:5px 0px 0px 10px;
 }
 
 .storyGrid li .fundButton{
